--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -1062,7 +1062,7 @@
   <!-- 02 -->
   <div class="body-margin">
     <P class="text-project-numbers color-gh">02</P>
-    <div class="row-change center-v margin">
+    <div class="row-change center-v body-margin">
       <div class="column">
         <P class="t-title-l">SECONDARY RESEARCH </P>
         <p class="horizontal-line"></p>
