--- a/project/index.html
+++ b/project/index.html
@@ -118,9 +118,6 @@
   <!--body-->
   <div class="body-margin">
     <div class="blank-lineheight-xl"></div>
-
-
-
     <div class="body-landing">
       <div class="body-intro">
         <div class="t-hello" id="t-hello-1550">HELLO, </div>
@@ -141,13 +138,13 @@
           </div>
         </div>
       </div>
-      <p class="t-intro z-index-top" data-aos="fade-up">
+
+      <div class="t-intro z-index-top" data-aos="fade-up">
         Passionate about translating complex business requirements into compelling user
-        experiences.
-        While my focus is primarily on design, I don't mind occasionally writing code when the
-        need
-        arises.</p>
+        experiences. While my focus is primarily on design, I don't mind occasionally writing code
+        when the need arises.</div>
     </div>
+    <div class="blank-lineheight-m"></div>
 
 
 
@@ -162,27 +159,6 @@
       <img class="se-arrow" src="../arrow-se.svg" alt="se-arrow">
     </div>
     <!-- content-->
-    <!--GARDENERS HUB-->
-    <div id="ytrigger">
-      <div class="body-h">
-        <div class="body-left body-img float">
-          <a href="/project/gardeners_hub">
-            <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
-          </a>
-        </div>
-
-        <div class="body-right body-txt">
-          <a href="/project/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
-          <p class="horizontal-line"></p>
-          <p class="t-text-m">A marketplace for local community</p>
-          <p class="t-text-m">May 2021 - August 2021</p>
-        </div>
-      </div>
-
-    </div>
-
-    <!--GARDENERS HUB-->
-    <br>
     <!--MEAL PLANNER-->
     <div id="ytrigger1">
 
@@ -202,34 +178,50 @@
       </div>
     </div>
     <!--MEAL PLANNER-->
-    <br>
+    <div class="blank-lineheight-m"></div>
+    <!--GARDENERS HUB-->
+    <div id="ytrigger">
+      <div class="body-h">
+        <div class="body-left body-img float">
+          <a href="/project/gardeners_hub">
+            <img src="../layout_gardenershub.png" alt="Gardeners' Hub">
+          </a>
+        </div>
+
+        <div class="body-right body-txt">
+          <a href="/project/gardeners_hub" class="t-title-l" data-aos="fade-up">GARDENERS HUB</a>
+          <p class="horizontal-line"></p>
+          <p class="t-text-m">A marketplace for local community</p>
+          <p class="t-text-m">May 2021 - August 2021</p>
+        </div>
+      </div>
+
+    </div>
+    <!--GARDENERS HUB-->
+    <div class="blank-lineheight-m"></div>
+
     <!--ALLTRAILS-->
     <div id="ytrigger2">
 
       <div class="body-h">
 
         <div class="body-left body-img float">
-          <a href="/alltrails">
-            <img src="../layout_alltrails.png" alt="Redesign AllTrails">
-          </a>
+          <p href="/alltrails">
+            <img class="width-l" src="../layout_alltrails.png" alt="Redesign AllTrails">
+          </p>
         </div>
+        <div class="vertical-line-blank"></div>
 
         <div class="body-right body-txt">
-          <a href="/alltrails" class="t-title-l" data-aos="fade-up">REDESIGN ALLTRAILS APP</a>
+          <p href="/alltrails" class="t-title-l" data-aos="fade-up">REDESIGN ALLTRAILS APP</p>
           <p class="horizontal-line"></p>
 
-          <p class="t-text-m">Spring 2021</p>
+          <p class="t-text-m">Coming Soon</p>
         </div>
       </div>
     </div>
     <!--ALLTRAILS-->
-    <br>
-    <br>
-
-
-
-
-
+    <div class="blank-lineheight-m"></div>
 
   </div>
 
