--- a/project/meal_planner/index.html
+++ b/project/meal_planner/index.html
@@ -233,128 +233,154 @@
       </div>
     </div>
     <!--final product 3-->
-    <br>
-  </div>
 
-  <!-- content-->
-  <div class="body-margin">
-    <div class="content-tl adding-margintop">
-      <p class="t-text-l"> Features </p>
-      <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
-    </div>
-  </div>
-  <!-- content-->
 
-  <div class="row center-h">
-    <div class="column width-mm color-grey border-radius padding padding-tb float center-v">
-      <div class="column center-v">
-        <div class="color-grey circle-mp-s float margin-xs">
-          <img class="mp-featureicons" src="f_icon_ equipment.svg" alt="Equipment">
+    <div class="column ">
+      <!-- content-->
+      <div class="body-margin">
+        <div class="content-tl adding-margintop">
+          <p class="t-text-l"> Features </p>
+          <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
         </div>
-        <P class="t-title-m"> Equipment</P>
-        <div class="horizontal-line-mp"></div>
       </div>
-
-      <div class="row align-top width-m">
-        <img class="icon-list" src="list.svg" alt="&bull;">
-        <ul>
-          <li class="t-title-s"> Cookwear</li>
-          <li class="t-text-s">Adding kitchen equipment into app</li>
-        </ul>
-      </div>
-
-      <div class="row align-top width-m">
-        <img class="icon-list" src="list.svg" alt="&bull;">
-        <ul>
-          <li class="t-title-s"> Cookwear</li>
-          <li class="t-text-s">the recipe will be generated based on current kitchen eq4uipment
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="row center-h">
-      <div class="column width-mm color-grey border-radius padding padding-tb float center-v">
-        <div class="column center-v">
-          <div class="color-grey circle-mp-s float margin-xs">
-            <img class="mp-featureicons" src="f_icon_ equipment.svg" alt="Recipe">
+      <!-- content-->
+      <div class="row center-h">
+        <div
+          class="row width-l item-height-m color-grey border-radius float center-v border-color-left">
+          <div class="column center-v padding width-m">
+            <div class="color-grey circle-mp-s float ">
+              <img class="mp-featureicons" src="f_icon_ equipment.svg" alt="Equipment">
+            </div>
+            <div class="horizontal-line-mp"></div>
+            <P class="t-title-m"> Equipment</P>
           </div>
-          <P class="t-title-m"> Recipe</P>
-          <div class="horizontal-line-mp"></div>
-        </div>
+          <div class="column padding">
+            <div class="row align-top">
+              <img class="icon-list" src="list.svg" alt="&bull;">
+              <ul>
+                <li class="t-title-s"> Cookwear</li>
+                <li class="t-text-s">Adding kitchen equipment into app</li>
+              </ul>
+            </div>
 
-        <div class="row align-top width-m">
-          <img class="icon-list" src="list.svg" alt="&bull;">
-          <ul>
-            <li class="t-title-s"> Recipe</li>
-            <li class="t-text-s">generate recipes based on existing food</li>
-          </ul>
-        </div>
-
-        <div class="row align-top width-m">
-          <img class="icon-list" src="list.svg" alt="&bull;">
-          <ul>
-            <li class="t-title-s"> Cookwear</li>
-            <li class="t-text-s"> generate recipes</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-  </div>
-  <div class="row center-h">
-    <div class="column width-mm color-grey border-radius padding padding-tb float center-v">
-      <div class="column center-v">
-        <div class="color-grey circle-mp-s float margin-xs">
-          <img class="mp-featureicons" src="f_icon_ equipment.svg" alt="Pantry">
-        </div>
-        <P class="t-title-m"> Pantry</P>
-        <div class="horizontal-line-mp"></div>
-      </div>
-
-      <div class="row align-top width-m">
-        <img class="icon-list" src="list.svg" alt="&bull;">
-        <ul>
-          <li class="t-title-s"> Pantry</li>
-          <li class="t-text-s">Ingredients currently have</li>
-        </ul>
-      </div>
-
-      <div class="row align-top width-m">
-        <img class="icon-list" src="list.svg" alt="&bull;">
-        <ul>
-          <li class="t-title-s"> Pantry</li>
-          <li class="t-text-s">cooking tools currently have
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="row center-h">
-      <div class="column width-mm color-grey border-radius padding padding-tb float center-v">
-        <div class="column center-v">
-          <div class="color-grey circle-mp-s float margin-xs">
-            <img class="mp-featureicons" src="f_icon_ equipment.svg" alt="Recipe">
+            <div class="row align-top">
+              <img class="icon-list" src="list.svg" alt="&bull;">
+              <ul>
+                <li class="t-title-s"> Cookwear</li>
+                <li class="t-text-s">the recipe will be generated based on current kitchen
+                  eq4uipment
+                </li>
+              </ul>
+            </div>
           </div>
-          <P class="t-title-m"> Shopping List</P>
-          <div class="horizontal-line-mp"></div>
         </div>
 
-        <div class="row align-top width-m">
-          <img class="icon-list" src="list.svg" alt="&bull;">
-          <ul>
-            <li class="t-title-s"> Shopping List</li>
-            <li class="t-text-s">generate recipes based on existing food</li>
-          </ul>
+
+        <div
+          class="row width-l item-height-m color-grey border-radius float center-v border-color-left">
+          <div class="column center-v padding width-m">
+            <div class="color-grey circle-mp-s float ">
+              <img class="mp-featureicons" src="f_icon_ equipment.svg" alt="Equipment">
+            </div>
+            <div class="horizontal-line-mp"></div>
+
+            <P class="t-title-m"> Recipe</P>
+          </div>
+          <div class="column padding">
+            <div class="row align-top">
+              <img class="icon-list" src="list.svg" alt="&bull;">
+              <ul>
+                <li class="t-title-s"> Recipe</li>
+                <li class="t-text-s">generate recipes based on existing food</li>
+              </ul>
+            </div>
+
+            <div class="row align-top">
+              <img class="icon-list" src="list.svg" alt="&bull;">
+              <ul>
+                <li class="t-title-s"> Cookwear</li>
+                <li class="t-text-s">generate recipes
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
 
-        <div class="row align-top width-m">
-          <img class="icon-list" src="list.svg" alt="&bull;">
-          <ul>
-            <li class="t-title-s"> Shopping List</li>
-            <li class="t-text-s"> generate recipes based on existing food</li>
-          </ul>
+      </div>
+
+      <div class="row center-h">
+        <div
+          class="row width-l item-height-m color-grey border-radius float center-v border-color-left">
+          <div class="column center-v padding width-m">
+            <div class="color-grey circle-mp-s float ">
+              <img class="mp-featureicons" src="f_icon_ equipment.svg" alt="Equipment">
+            </div>
+            <div class="horizontal-line-mp"></div>
+
+            <P class="t-title-m"> Pantry</P>
+          </div>
+          <div class="column padding">
+            <div class="row align-top">
+              <img class="icon-list" src="list.svg" alt="&bull;">
+              <ul>
+                <li class="t-title-s"> Pantry</li>
+                <li class="t-text-s">Ingredients currently havehavehavehavehavehave </li>
+              </ul>
+            </div>
+
+            <div class="row align-top">
+              <img class="icon-list" src="list.svg" alt="&bull;">
+              <ul>
+                <li class="t-title-s"> Pantry</li>
+                <li class="t-text-s">cooking tools currently have
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+
+        <div
+          class="row width-l item-height-m color-grey border-radius float center-v border-color-left">
+          <div class="column center-v padding width-m">
+            <div class="color-grey circle-mp-s float ">
+              <img class="mp-featureicons" src="f_icon_ equipment.svg" alt="Equipment">
+            </div>
+            <div class="horizontal-line-mp"></div>
+
+            <P class="t-title-m"> Shopping List
+
+            </P>
+          </div>
+          <div class="column padding">
+            <div class="row align-top">
+              <img class="icon-list" src="list.svg" alt="&bull;">
+              <ul>
+                <li class="t-title-s"> Shopping List
+
+                </li>
+                <li class="t-text-s">generate recipes based on existing food</li>
+              </ul>
+            </div>
+
+            <div class="row align-top">
+              <img class="icon-list" src="list.svg" alt="&bull;">
+              <ul>
+                <li class="t-title-s"> Shopping List
+
+                </li>
+                <li class="t-text-s">generate recipes based on existing food
+
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+
+    <div class="blank-lineheight-xl"></div>
+
   </div>
 
 
@@ -367,7 +393,7 @@
     </div>
     <!-- content-->
     <!--Problem and solution-->
-    <div class="row-change align-top margin">
+    <div class="row-change align-top">
 
       <div class="column width-xxl">
         <P class="t-title-m">PROBLEMS</P>
@@ -723,9 +749,9 @@
           </div>
         </div>
       </div>
-   
-   
-   
+
+
+
     </div>
     <br>
     <br>
@@ -809,7 +835,7 @@
       website features, analysis how they addressed similar problems.</p>
     <div class="center-h padding">
 
-      <img  class="width-xl" src="./competitive_analysis.png" alt="COMPETITIVE ANALYSIS">
+      <img class="width-xl" src="./competitive_analysis.png" alt="COMPETITIVE ANALYSIS">
 
     </div>
 
@@ -817,61 +843,82 @@
 
     <table>
       <tr>
-        <th>Application</th>
+        <th></th>
         <td class="t-title-s">Description</td>
         <td class="t-title-s">UX</td>
         <td class="t-title-s">Recipe</td>
         <td class="t-title-s">Meal Planning</td>
         <td class="t-title-s">Shopping List</td>
+        <td class="t-title-s">Inventory</td>
+        <td class="t-title-s">Appliance</td>
+
       </tr>
       <tr>
         <th>OrganizEat</th>
-        <td>Online Features</td>
+        <td>digital recipe organizer​</td>
         <td>Good</td>
         <td>Yes</td>
         <td>Yes</td>
         <td>Yes</td>
+        <td>Yes</td>
+        <td>No</td>
+
 
       </tr>
       <tr>
         <th>BigOven</th>
-        <td>Online Features</td>
+        <td>Free recipe app for home cooks</td>
         <td>Good</td>
         <td>Yes</td>
         <td>Yes</td>
         <td>Yes</td>
+        <td>Yes</td>
+        <td>No</td>
+
       </tr>
       <tr>
         <th>My Fridge Food</th>
-        <td>Online Features</td>
-        <td>Good</td>
+        <td>Easy recipes using ingredients you already have</td>
+        <td>Average</td>
         <td>Yes</td>
+        <td>No</td>
+        <td>No</td>
         <td>Yes</td>
-        <td>Yes</td>
+        <td>No</td>
+
       </tr>
       <tr>
         <th>Pantry Check</th>
-        <td>Online Features</td>
-        <td>Good</td>
+        <td>Grocery and Food Inventory Expiration Reminders Barcode Scanner</td>
+        <td>Average</td>
+        <td>No</td>
+        <td>No</td>
         <td>Yes</td>
         <td>Yes</td>
-        <td>Yes</td>
+        <td>No</td>
+
       </tr>
       <tr>
         <th>Grocery</th>
-        <td>Online Features</td>
-        <td>Good</td>
+        <td>smartest and fastest grocery shopping app</td>
+        <td>Average</td>
         <td>Yes</td>
         <td>Yes</td>
-        <td>Yes</td>
+        <td>No</td>
+        <td>No</td>
+        <td>No</td>
+
       </tr>
       <tr>
         <th>Mealthy</th>
-        <td>Online Features</td>
+        <td> recipe app and kitchen companion</td>
         <td>Good</td>
         <td>Yes</td>
         <td>Yes</td>
+        <td>No</td>
+        <td>No</td>
         <td>Yes</td>
+
       </tr>
     </table>
 
@@ -910,7 +957,7 @@
           problems with planning their meals, struggle with grocery shopping, and lack fridge
           information. </p>
       </div>
-      <div class="vertical-line-mp">
+      <div class="vertical-line-mp-s">
       </div>
       <div class="row">
         <div class="column center-v"> <img class="icon-l margin-s float" src="icon_mp_2-1.svg"
@@ -927,108 +974,64 @@
     <br>
   </div>
   <!-- 02 -->
+  <div class=" bg-color-mp-noheight">
+    <div class="blank-lineheight-m"></div>
 
-  <div class="body-margin">
-    <div class="column">
+    <div class="column body-margin">
       <div class="row padding-tb">
         <P class="t-title-m"> Key Findings from the Pains and Gains </P>
         <img class="icon-s float" src="icon_mp_2-1.svg" alt="User Research" class="image">
       </div>
-      <!-- finding 1 -->
-      <div class="column">
-        <p class="t-title-m">Finding 1 </p>
-        <p class="t-text-m"> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx </p>
-      </div>
-      <br>
-      <div class="row float color-grey">
-        <img src="./icon_mp_4-1.svg" alt="DIAGRAM" class="icon-l width-l">
-        <div class="  width-l">
-          <div class="column margin-xs ">
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.”
-            </p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx”</p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx” </p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx” </p>
-          </div>
-        </div>
-      </div>
-      <!-- finding 1 -->
-      <br>
-
-      <!-- finding 2 -->
-      <div class="column">
-        <p class="t-title-m">Finding 2 </p>
-        <p class="t-text-m"> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx </p>
-      </div>
-      <br>
-      <div class="row float color-grey">
-        <img src="./icon_mp_4-1.svg" alt="DIAGRAM" class="icon-l width-l">
-        <div class="  width-l">
-          <div class="column margin-xs ">
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.”
-            </p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx”</p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx” </p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx” </p>
-          </div>
-        </div>
-      </div>
-      <!-- finding 2 -->
-      <br>
-
-      <!-- finding 3 -->
-      <div class="column">
-        <p class="t-title-m">Finding 3 </p>
-        <p class="t-text-m"> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx </p>
-      </div>
-      <br>
-      <div class="row float color-grey">
-        <img src="./icon_mp_4-1.svg" alt="DIAGRAM" class="icon-l width-l">
-        <div class="  width-l">
-          <div class="column margin-xs ">
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.”
-            </p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx”</p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx” </p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx” </p>
-          </div>
-        </div>
-      </div>
-      <!-- finding 3 -->
-      <br>
-
-      <div class="column margin">
-        <div class="row">
-          <P class="t-title-m">CUSTOMER JOURNEY </P>
-          <img class="icon-s float" src="icon_mp_2-2.svg" alt="CUSTOMER JOURNEY" class="image">
-        </div>
-        <p class="t-text-m">a customer journey map is a diagram that visually
-          demonstrates the user flow through the application, starting with initial contact for
-          discovery, and continues throughout the process of how to generate user's meal plan with
-          this app</p>
-      </div>
-      <br>
-      <!-- place holder -->
-      <div class="column">
-        <p class="t-title-m">place holder </p>
-        <p class="t-text-m"> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx </p>
-      </div>
-      <br>
-      <div class="row float color-grey">
-        <img src="./icon_mp_4-1.svg" alt="DIAGRAM" class="icon-l width-l">
-        <div class="  width-l">
-          <div class="column margin-xs ">
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.”
-            </p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx”</p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx” </p>
-            <p class="t-text-s"> “xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx” </p>
-          </div>
-        </div>
-      </div>
-      <!-- place holder -->
     </div>
+
+    <!-- finding 1 -->
+    <div class="column">
+      <div class="column body-margin">
+        <p class="t-title-m">Finding 1 </p>
+        <p class="horizontal-line-mp"></p>
+        <p class="t-text-m"> House Wife </p>
+      </div>
+      <div class="column center-v margin color-grey">
+        <img src="./empathy_mapping-01.svg" alt="DIAGRAM" class="height">
+      </div>
+    </div>
+    <!-- finding 1 -->
+    <div class="blank-lineheight-l"></div>
+
+    <!-- finding 2 -->
+    <div class="column">
+      <div class="column body-margin">
+        <p class="t-title-m">Finding 2 </p>
+        <p class="horizontal-line-mp"></p>
+        <p class="t-text-m"> Software Engineer </p>
+      </div>
+      <div class="column center-v margin color-grey">
+        <img src="./empathy_mapping-02.svg" alt="DIAGRAM" class="height">
+      </div>
+    </div>
+    <!-- finding 2 -->
+    <div class="blank-lineheight-l"></div>
+
+    <!-- finding 3 -->
+    <div class="column">
+      <div class="column body-margin">
+        <p class="t-title-m">Finding 3 </p>
+        <p class="horizontal-line-mp"></p>
+        <p class="t-text-m"> Sales consultant </p>
+      </div>
+      <div class="column center-v margin color-grey">
+        <img src="./empathy_mapping-03.svg" alt="DIAGRAM" class="height">
+      </div>
+    </div>
+
+    <div class="blank-lineheight-l"></div>
+
   </div>
+
+
+  <!-- finding 3 -->
+
+
   <br>
 
 
