--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
           </div>
         </div>
       </div>
-      <p class="t-intro z-index-top" data-aos="fade-up">
+
+      <div class="t-intro z-index-top" data-aos="fade-up">
         Passionate about translating complex business requirements into compelling user
-        experiences.
-        While my focus is primarily on design, I don't mind occasionally writing code when the
-        need
-        arises.</p>
+        experiences. While my focus is primarily on design, I don't mind occasionally writing code
+        when the need arises.</div>
     </div>
+    <div class="blank-lineheight-m"></div>
 
 
 
@@ -167,9 +167,27 @@
       <div class="carousel-content">
 
         <div class="slide">
+          <div class="body-h">
+            <div class="body-right  body-txt">
+              <a href="/project/meal_planner" class="t-title-m"> MEAL PLANNER </a>
+              <p class="horizontal-line"></p>
+              <p class="t-text-s">A mobile app helps planning a healthy meal</p>
+              <p class="t-text-s">May 2021 - August 2021 </p>
+            </div>
+            <div class="vertical-line">
+            </div>
+            <div class="body-left">
+              <a href="/project/meal_planner">
+                <img id="carousel-project-img" src="./layout_mealplanner.png" alt="Meal Planner">
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="slide">
           <div>
             <div class="body-h">
-              <div class="body-right  body-txt">
+              <div class="body-right body-txt">
                 <a href="/project/gardeners_hub" class="t-title-m"> GARDENERS HUB</a>
                 <p class="horizontal-line"></p>
                 <p class="t-text-s">A marketplace for local community</p>
@@ -179,33 +197,14 @@
               </div>
               <div class="body-left">
                 <a href="/project/gardeners_hub">
-                  <img id="carousel-project-img" src="./layout_gardenershub.png" alt="Architecture">
+                  <img id="carousel-project-img" src="./layout_gardenershub.png"
+                    alt="Gardeners' Hub">
                 </a>
               </div>
             </div>
           </div>
         </div>
-        <div class="slide">
-          <div>
-            <div class="body-h">
-              <div class="body-right  body-txt">
-                <a href="/project/meal_planner" class="t-title-m"> MEAL PLANNER </a>
-                <p class="horizontal-line"></p>
-                <p class="t-text-s">A mobile app helps planning a healthy meal
 
-                </p>
-                <p class="t-text-s">May 2021 - August 2021 </p>
-              </div>
-              <div class="vertical-line">
-              </div>
-              <div class="body-left">
-                <a href="/project/meal_planner">
-                  <img id="carousel-project-img" src="./layout_mealplanner.png" alt="GARDENERS HUB">
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="slide">
           <div>
             <div class="body-h">
