--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
   <link rel="stylesheet" href="main.css" />
   <script type="text/javascript" src="scripts.js"></script>
+  <script type="text/javascript" src="scripts_about.js"></script>
+
 
   <link
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
@@ -168,7 +170,7 @@
 
         <div class="slide">
           <div class="body-h">
-            <div class="body-right  body-txt">
+            <div class="body-right body-txt">
               <a href="/project/meal_planner" class="t-title-m"> MEAL PLANNER </a>
               <p class="horizontal-line"></p>
               <p class="t-text-s">A mobile app helps planning a healthy meal</p>
@@ -178,7 +180,7 @@
             </div>
             <div class="body-left">
               <a href="/project/meal_planner">
-                <img id="carousel-project-img" src="./layout_mealplanner.png" alt="Meal Planner">
+                <img class="width-l" src="./layout_mealplanner.png" alt="Meal Planner">
               </a>
             </div>
           </div>
@@ -197,7 +199,7 @@
               </div>
               <div class="body-left">
                 <a href="/project/gardeners_hub">
-                  <img id="carousel-project-img" src="./layout_gardenershub.png"
+                  <img class="width-l" src="./layout_gardenershub.png"
                     alt="Gardeners' Hub">
                 </a>
               </div>
@@ -219,7 +221,7 @@
               </div>
               <div class="body-left">
                 <a href="/alltrails">
-                  <img id="carousel-project-img" src="./layout_alltrails.png"
+                  <img class="width-l" src="./layout_alltrails.png"
                     alt="REDESIGN ALLTRAILS APP">
                 </a>
               </div>
