--- a/project/index.html
+++ b/project/index.html
@@ -2,7 +2,9 @@
 
 <head>
   <link rel="stylesheet" href="../main.css">
+  <script type="text/javascript" src="scripts.js"></script>
   <script type="text/javascript" src="../scripts.js"></script>
+
 
 
 
@@ -207,7 +209,7 @@
 
         <div class="body-left body-img float">
           <p href="/alltrails">
-            <img class="width-l" src="../layout_alltrails.png" alt="Redesign AllTrails">
+            <img class="width-mm" src="../layout_alltrails.png" alt="Redesign AllTrails">
           </p>
         </div>
         <div class="vertical-line-blank"></div>
