--- a/architecture/index.html
+++ b/architecture/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" href="../main.css">
   <script type="text/javascript" src="../scripts.js"></script>
+  <script type="text/javascript" src="scripts.js"></script>
 
 
 
