--- a/architecture/index.html
+++ b/architecture/index.html
@@ -115,7 +115,7 @@
   <!--head-->
   <!--body-->
 
-  <div class="body-margin">
+  <div class="margin-all">
     <div class="blank-lineheight-xl"></div>
 
     <div class="body-landing">
