--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="body-margin">
+  <div class="margin-all">
     <div class="blank-lineheight-xl"></div>
     <div class="body-landing">
       <div class="body-intro">
@@ -160,7 +160,7 @@
     <!-- content-->
     <!-- Product -->
     <div class="carousel">
-      <div class="nav nav-left">
+      <div class="nav-project nav-left">
         <div class="ion-chevron-left carousel-arrow-icon-left">
           <img src="./arrow-left.svg" alt="left">
         </div>
@@ -176,18 +176,18 @@
               <p class="t-text-s">A mobile app helps planning a healthy meal</p>
               <p class="t-text-s">May 2021 - August 2021 </p>
             </div>
-            <div class="vertical-line">
-            </div>
+
+
+            
             <div class="body-left">
               <a href="/project/meal_planner">
-                <img class="width-l" src="./layout_mealplanner.png" alt="Meal Planner">
+                <img class="width-xl" src="./layout_mealplanner.png" alt="Meal Planner">
               </a>
             </div>
           </div>
         </div>
 
         <div class="slide">
-          <div>
             <div class="body-h">
               <div class="body-right body-txt">
                 <a href="/project/gardeners_hub" class="t-title-m"> GARDENERS HUB</a>
@@ -195,43 +195,37 @@
                 <p class="t-text-s">A marketplace for local community</p>
                 <p class="t-text-s">May 2021 - August 2021 </p>
               </div>
-              <div class="vertical-line">
-              </div>
+
               <div class="body-left">
                 <a href="/project/gardeners_hub">
-                  <img class="width-l" src="./layout_gardenershub.png"
-                    alt="Gardeners' Hub">
+                  <img class="width-xl" src="./layout_gardenershub.png" alt="Gardeners' Hub">
                 </a>
               </div>
             </div>
-          </div>
         </div>
 
         <div class="slide">
-          <div>
             <div class="body-h">
               <div class="body-right  body-txt">
-                <a href="/alltrails" class="t-title-m"> REDESIGN ALLTRAILS APP </a>
+                <p href="/alltrails" class="t-title-m"> REDESIGN ALLTRAILS APP </p>
                 <p class="horizontal-line"></p>
+                <p class="t-text-s">Coming Soon</p>
                 <p class="t-text-s">Adding comparison features to help user planning their hiking
                   trip</p>
                 <p class="t-text-s">August 2021 </p>
               </div>
-              <div class="vertical-line">
-              </div>
+    
               <div class="body-left">
-                <a href="/alltrails">
-                  <img class="width-l" src="./layout_alltrails.png"
-                    alt="REDESIGN ALLTRAILS APP">
-                </a>
+                <p href="/alltrails">
+                  <img class="width-xl" src="./layout_alltrails.jpg" alt="REDESIGN ALLTRAILS APP">
+                </p>
               </div>
             </div>
-          </div>
         </div>
 
       </div>
 
-      <div class="nav nav-right">
+      <div class="nav-project nav-right">
         <div class="ion-chevron-right carousel-arrow-icon-right">
           <img src="./arrow-right.svg" alt="right">
         </div>
@@ -840,7 +834,7 @@
   </div>
 
   <!-- about me-->
-  <div class="body-margin">
+  <div class="margin-all">
     <div class="t-title-m body-v">
       <a href="https://s3-us-west-1.amazonaws.com/vickywang.design/Resume_vw.pdf"
         class="text-about-resume"> Download My Resume
@@ -850,7 +844,7 @@
   <div class="blank-lineheight-m"></div>
 
 
-  <div class="body-margin">
+  <div class="margin-all">
     <div class="about-me">
       <div class="body-v">
         <div class="body-left t-title-l" data-aos="fade-up">
