--- a/photography/index.html
+++ b/photography/index.html
@@ -113,7 +113,7 @@ Interested in what you see? Shoot me an email :) " />
   </div>
   <!--head-->
   <!--body-->
-  <div class="body-margin">
+  <div class="margin-all">
     <div class="blank-lineheight-xl"></div>
 
     <div class="body-landing">
