--- a/project/gardeners_hub/index.html
+++ b/project/gardeners_hub/index.html
@@ -144,7 +144,7 @@
 
 
   <!-- content-->
-  <div class="body-margin">
+  <div class="margin-all">
     <div class="content-tl adding-margintop">
       <p class="t-text-l"> Initial Concepts </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
@@ -214,7 +214,7 @@
   </div>
 
   <!-- content-->
-  <div class="body-margin">
+  <div class="margin-all">
     <div class="content-tl">
       <p class="t-text-l"> Final Design </p>
       <img class="se-arrow" src="../../arrow-se.svg" alt="se-arrow">
@@ -281,11 +281,11 @@
     </div>
   </div>
   <!--img 4-->
-  <div class="blank-lineheight-xl"></div>
+  <div class="blank-lineheight-l"></div>
 
 
   <!-- content-->
-  <div class="body-margin">
+  <div class="margin-all">
 
     <div class="content-tl">
       <p class="t-text-l"> Case Study</p>
@@ -294,11 +294,11 @@
     <!-- content-->
 
     <!--Problem and solution-->
-    <div class="row-change center-v margin">
+    <div class="row-change align-top">
       <div class="column">
-        <P class="t-title-m">PROBLEMS</P>
+        <P class="t-title-l">PROBLEMS</P>
         <p class="horizontal-line"></p>
-        <p class="t-text-m">Gardeners Hub Application aims to build the local market network and
+        <p class="t-text-m width-l">Gardeners Hub Application aims to build the local market network and
           improve the horticultural experience by offering more comprehensive local market
           networking opportunities to the gardeners that result in reducing wasting resources and
           preventing establishment failure by improving learning and sharing experience. An
@@ -309,7 +309,7 @@
       <div class="vertical-line">
       </div>
       <div class="column">
-        <P class="t-title-m">SOLUTIONS</P>
+        <P class="t-title-l">SOLUTIONS</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">Gardeners' Hub provides a local marketplace platform to help gardeners
           reduce wasting resources and a regional social network with the local community.
@@ -317,7 +317,7 @@
       </div>
       <div class="vertical-line"></div>
       <div class="column">
-        <P class="t-title-m">PROCESS</P>
+        <P class="t-title-l">PROCESS</P>
         <p class="horizontal-line"></p>
         <p class="t-text-m">The goal of this project is to find solutions and ideas to help
           gardeners to improve their horticultural experience with neighbors and reduce wasting
@@ -391,12 +391,9 @@
   <br>
 
   <!-- 01 -->
-  <div class="body-margin">
+  <div class="margin-all">
     <P class="text-project-numbers color-gh">01</P>
-
-
-
-    <div class="row-change margin center-v ">
+    <div class="row-change center-v">
       <div class="column">
         <P class="t-title-l">BACKGROUND RESEARCH</P>
         <p class="horizontal-line"></p>
@@ -437,10 +434,10 @@
         18 months, and 36
         months of horticultural experience.</p>
     </div>
-    <div class="blank-lineheight-xl"></div>
+    <div class="blank-lineheight-l"></div>
 
 
-    <div class="row-change center-v margin">
+    <div class="row-change center-v">
       <div class="column">
         <P class="t-title-m">Gardeners’ pain points</P>
         <p class="t-text-m">&#183; What is the major problem to plant their own food? </p>
@@ -463,9 +460,9 @@
           gardeners </p>
       </div>
     </div>
-    <div class="blank-lineheight-xl"></div>
+    <div class="blank-lineheight-l"></div>
 
-    <div class="column margin">
+    <div class="column">
       <div class="row">
         <P class="t-title-m">COMPETITIVE ANALYSIS</P>
         <img class="icon-s float" src="icon_competitor.svg" alt="User Research" class="image">
@@ -475,7 +472,7 @@
     </div>
     <br>
 
-    <div class="row-change center-v margin">
+    <div class="row-change center-v">
       <div class="column">
         <P class="t-title-m">Mobile App</P>
         <p class="t-text-m">&#183; don't have a social network features and task history tracking
@@ -766,7 +763,7 @@
       </div>
     </div>
     <br>
-    <div class="row-change center-v margin">
+    <div class="row-change center-v">
       <div class="column">
         <P class="t-title-m">Website</P>
         <p class="t-text-m">&#183; hard to share images and article on social media </p>
@@ -1058,12 +1055,11 @@
   </div>
 
   <!-- 01 -->
-  <div class="blank-lineheight-xl"></div>
 
   <!-- 02 -->
-  <div class="body-margin">
+  <div class="margin-all">
     <P class="text-project-numbers color-gh">02</P>
-    <div class="row-change center-v body-margin">
+    <div class="row-change center-v">
       <div class="column">
         <P class="t-title-l">SECONDARY RESEARCH </P>
         <p class="horizontal-line"></p>
@@ -1099,8 +1095,7 @@
     </div>
   </div>
 
-  <br>
-
+<div class="blank-lineheight-m"></div>
   <div class="row center-h bg-color-gh1 align-bottom" id="bg-color-opc1">
     <div
       class="column center-v align-top color-grey border-radius item-height-l width-m padding float">
@@ -1139,8 +1134,8 @@
   </div>
 
   <div class="blank-lineheight-l"></div>
-  <div class="body-margin">
-    <div class="row-change center-v margin">
+  <div class="margin-all">
+    <div class="row-change center-v">
       <div class="column">
         <P class="t-title-m">Key Findings from the Contextual Inquiries </P>
       </div>
@@ -1255,13 +1250,13 @@
     </div>
     <div class="blank-lineheight-l"></div>
 
-    <div class="column margin">
+    <div class="column">
       <P class="t-title-m center-h padding-l">Affinity Mapping Pain Points </P>
       <img class="float" src="affinity_mapping1.svg" alt="User Research" class="image">
     </div>
     <div class="blank-lineheight-l"></div>
 
-    <div class="column margin">
+    <div class="column">
       <P class="t-title-m center-h padding-l">Organize the pain points together into group of
         similar notes
 
@@ -1270,7 +1265,7 @@
     </div>
     <div class="blank-lineheight-l"></div>
 
-    <div class="column margin">
+    <div class="column">
       <P class="t-title-m center-h padding-l">Prioritise and label pain points </P>
       <img class="float" src="affinity_mapping3.svg" alt="User Research" class="image">
     </div>
@@ -1281,9 +1276,9 @@
   <!-- 03 IDEATION -->
 
   <P class="text-project-numbers color-gh">03</P>
-  <div class="body-margin">
+  <div class="margin-all">
 
-    <div class="row-change center-v margin">
+    <div class="row-change center-v">
       <div class="column">
         <P class="t-title-l">IDEATION </P>
         <p class="horizontal-line"></p>
@@ -1338,6 +1333,7 @@
         complete a task. The user flow takes our gardeners from their entry point through a set of
         steps towards a successful outcome and final action, such as purchasing a product. </p>
     </div>
+
     <div class="center-h">
       <div class="width-l float">
         <svg width="881px" height="966px" viewBox="0 0 881 966" version="1.1"
@@ -2580,8 +2576,8 @@
   <div class="blank-lineheight-l"></div>
 
   <!-- initial concepts -->
-  <div class="body-margin">
-    <div class="column body-margin">
+  <div class="margin-all">
+    <div class="column margin-all">
       <P class="t-title-m">PURPOSE OF THE APP </P>
       <div class="blank-lineheight-s"></div>
 
@@ -2647,10 +2643,10 @@
   <!-- 03 -->
 
   <!-- 04 -->
-  <div class="body-margin">
+  <div class="margin-all">
     <P class="text-project-numbers color-gh">04</P>
 
-    <div class="row-change center-v margin">
+    <div class="row-change center-v">
       <div class="column">
         <P class="t-title-l">PROTOTYPE & TESTING </P>
         <p class="horizontal-line"></p>
@@ -2801,7 +2797,7 @@
 
     <div class="blank-lineheight-m"></div>
 
-    <P class="t-title-m body-margin">HIGH-FIDELITY WIREFRAMES </P>
+    <P class="t-title-m margin-all">HIGH-FIDELITY WIREFRAMES </P>
 
     <div class="carouselGH">
       <div class="nav-gh nav-left-gh">
