--- a/project/index.html
+++ b/project/index.html
@@ -118,7 +118,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="body-margin">
+  <div class="margin-all">
     <div class="blank-lineheight-xl"></div>
     <div class="body-landing">
       <div class="body-intro">
@@ -209,7 +209,7 @@
 
         <div class="body-left body-img float">
           <p href="/alltrails">
-            <img class="width-mm" src="../layout_alltrails.png" alt="Redesign AllTrails">
+            <img class="width-l" src="../layout_alltrails.jpg" alt="Redesign AllTrails">
           </p>
         </div>
         <div class="vertical-line-blank"></div>
