--- a/architecture/thesis_studio/index.html
+++ b/architecture/thesis_studio/index.html
@@ -114,7 +114,7 @@
   <span id="circle" class="circle"></span>
 
   <!--body-->
-  <div class="body-margin">
+  <div class="margin-all">
     <br>
     <br>
     <br>
